--- a/pokemon-app/pokemon-app/src/stylesheets/Pokecard.css
+++ b/pokemon-app/pokemon-app/src/stylesheets/Pokecard.css
@@ -1,3 +1,14 @@
 .Pokecard {
-    border: 2px solid red
+    /* border: 2px solid red; */
+    width: 250px;
+    padding: 10px;
+    margin: 1rem;
+    box-shadow: 7px 10px 12px -5px;
+    text-align: center;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.Pokecard-data {
+    font-size: 80%;
 }
