--- a/pokemon-app/pokemon-app/src/stylesheets/Pokecard.css
+++ b/pokemon-app/pokemon-app/src/stylesheets/Pokecard.css
@@ -12,3 +12,22 @@
 .Pokecard-data {
     font-size: 80%;
 }
+
+.Pokecard-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    background-color: #eceff1;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+}
+
+.Pokecard img {
+    transition: all ease 500ms;
+}
+
+.Pokecard img:hover {
+    transform: scale(1.5);
+    opacity: 0.7;
+}
